# openapi/bundled/college-agent.json
@@ -302,10 +302,10 @@
         }
       }
     },
-    "/Indivudial/{id}/Administrator": {
+    "/Individual/{id}/Administrator": {
       "get": {
         "summary": "Read Administrator by Individual ID",
-        "operationId": "get-Indivudial-id-Administrator",
+        "operationId": "get-Individual-id-Administrator",
         "parameters": [
           {
             "name": "id",
